# graphics-starter

./: .gitignore  CMakeLists.txt  README.md
dependencies/include/: wrapper_glfw.h
dependencies/include/glad/: glad.h
dependencies/src/: glad.c  wrapper_glfw.cpp
src/: main.cpp
src/shaders/: basic.frag  basic.vert
